# ish

./: .gitattributes  .gitignore  AGENTS.md  AGREEMENT.md  CONTRIBUTING.md  EXECUTION_CONFIGURATIONS.md  EXECUTION_CONFIGURATIONS_TODO.md  GLOSSARY.md  LICENSE  MODULES.md  MODULES_TODO.md  README.md  REASONING.md  REASONING_TODO.md  REQUIREMENTS_TODO.md  TYPES.md  TYPES_TODO.md
.claude/: settings.json
.claude/skills/: accept  audit  implement  plan-implementation  propose  revise
.github/: copilot-instructions.md
.github/prompts/: plan-ishPrototype.prompt.md
docs/: INDEX.md  comparison.md
docs/ai-guide/: INDEX.md  antipatterns.md  orientation.md  patterns.md  playbook-concurrency.md  playbook-encumbered.md  playbook-high-assurance.md  playbook-low-assurance.md  playbook-mixed.md  playbook-streamlined.md
docs/architecture/: INDEX.md  ast.md  codegen.md  overview.md  runtime.md  shell.md  stdlib.md  vm.md
docs/errors/: INDEX.md
docs/project/: documentation-debt.md  maturity.md  open-questions.md  roadmap.md
docs/scripts/: audit-prompt.md  (+4 more)
proto/: ARCHITECTURE.md  Cargo.toml  README.md
proto/ish-shell/: Cargo.toml  README.md
proto/ish-shell/src/: highlight.rs  interface_cmd.rs  main.rs  repl.rs  validate.rs
proto/ish-vm/: Cargo.toml  README.md
proto/ish-vm/src/: access_control.rs  analyzer.rs  builtins.rs  environment.rs  error.rs  interface_checker.rs  interpreter.rs  lib.rs  module_loader.rs  reflection.rs  value.rs
proto/ish-vm/src/ledger/: audit.rs  entry.rs  entry_type.rs  mod.rs  narrowing.rs  standard.rs  type_compat.rs  vm_integration.rs
(+335 files in other folders)
