[package]
name = "ish-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
ish-ast = { path = "../ish-ast" }
ish-parser = { path = "../ish-parser" }
ish-vm = { path = "../ish-vm" }
ish-stdlib = { path = "../ish-stdlib" }
reedline = { version = "0.46", features = ["external_printer"] }
nu-ansi-term = "0.50"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
