[package]
name = "ish-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
ish-ast = { path = "../ish-ast" }
ish-runtime = { path = "../ish-runtime" }
gc = { version = "0.5", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }

[dev-dependencies]
ish-parser = { path = "../ish-parser" }
tokio = { version = "1", features = ["rt", "time", "process", "sync", "macros", "rt-multi-thread"] }
